# save-search

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/ss-app/: Cargo.toml  app.manifest  app.rc  build.rs
crates/ss-app/src/: dlgpopup.rs  icons.rs  main.rs  paint.rs  searchwin.rs  settings_win.rs  theme.rs
crates/ss-config/: Cargo.toml
crates/ss-config/src/: lib.rs
crates/ss-core/: Cargo.toml
crates/ss-core/examples/: cache.rs  cat.rs  scan.rs
crates/ss-core/src/: catalog.rs  category.rs  drives.rs  index.rs  lib.rs  mft.rs  persist.rs
crates/ss-platform/: Cargo.toml
crates/ss-platform/src/: lib.rs
crates/ss-shell/: Cargo.toml
crates/ss-shell/examples/: folders.rs
crates/ss-shell/src/: dialog.rs  explorer.rs  lib.rs
crates/ss-ui/: Cargo.toml
crates/ss-ui/src/: lib.rs
tools/: make_icon.py
