[package]
name = "ss-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ss-app"
path = "src/main.rs"
# GUI 程序内嵌 requireAdministrator 清单；`cargo test` 会为 bin 生成测试 harness 并尝试
# 直接运行 → 非提权环境下报 os error 740（需要提升）。本 bin 无单元测试，禁用其测试目标，
# 让 `cargo test`（本地与 CI）只跑库 crate 的测试。
test = false

[dependencies]
ss-core = { workspace = true }
ss-shell = { workspace = true }
ss-config = { workspace = true }
parking_lot = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_UI_HiDpi",
] }

[build-dependencies]
embed-resource = "2"
