[package]
name = "ss-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ss-platform = { workspace = true }
memchr = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
] }
